updated map example color scheme

--- a/intro-analytics-interns/analytics-interns.ipynb
+++ b/intro-analytics-interns/analytics-interns.ipynb
@@ -38,9 +38,9 @@
     "\n",
     "The following presentation has been written in a **Jupyter Notebook** using **Python**.\n",
     "\n",
-    "<img style=\"float:left; width:40%\" src=\"http://morganlinton.com/wp-content/uploads/2015/04/python-programming.png\"/>\n",
+    "<img style=\"float:left; width:40%\" src=\"http://lambdaops.com/jupyter-environments-odsc2015/pictures/jupyter-logo.png\"/>\n",
     "\n",
-    "<img style=\"float:left; width:40%; margin-left:5%\" src=\"http://lambdaops.com/jupyter-environments-odsc2015/pictures/jupyter-logo.png\"/>\n",
+    "<img style=\"float:left; width:40%; margin-left:5%\" src=\"http://morganlinton.com/wp-content/uploads/2015/04/python-programming.png\"/>\n",
     "\n",
     "<br clear=\"all\"/>"
    ]
@@ -105,13 +105,13 @@
     "* In a manufacturing setting, machine learning is mostly used for finding patterns in industrial data to:\n",
     "    * Monitor machine performance, quality and reliability (e.g., warranty, safety or regulatory requirements.)\n",
     "    * Improve operational equipment (asset) uptime and availability (e.g., predictive maintenance)\n",
-    "* Manufacturers were awash in data long before the “Internet of Things” or “big data” terms were coined\n",
+    "* Manufacturers were awash in data long before the “Internet of Things” or “big data” terms were coined:\n",
     "    * Product quality/testing\n",
     "    * Operations/production performance and planning\n",
     "    * Machine/sensor data\n",
     "    * Work/repair order history\n",
     "    * Environmental factors (e.g., ambient temperature, humidity, etc)\n",
-    "* Businesses are generally good at collecting data and building data platforms, but struggle to understand the contents stored i n the data platform. One of their top desires is therefore more training on current analytical tools"
+    "* Businesses are generally good at collecting data and building data platforms, but struggle to understand the contents stored in the data platform. One of their top desires is therefore more training on current analytical tools"
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -160,10 +160,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x209a96ed630>"
+       "<IPython.lib.display.YouTubeVideo at 0x209ac073da0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -492,10 +492,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x209a9644ba8>"
+       "<IPython.lib.display.IFrame at 0x15f6e422a58>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1409,7 +1409,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
